--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <main>
             <section class="presentation">
-                <h2>🌟 Bienvenue sur Cmeras UMMTO Votre Destination High-Tech pour la Photographie ! 🌟</h2>
+                <h2>🌟 Bienvenue sur Cameras UMMTO Votre Destination High-Tech pour la Photographie ! 🌟</h2>
                 <p>Découvrez notre sélection exclusive de caméras professionnelles,
                      accessoires et équipements pour capturer chaque moment avec précision. 
                      Que vous soyez débutant ou expert, trouvez le matériel qu’il vous faut au meilleur prix. 
