--- a/authentication.html
+++ b/authentication.html
@@ -18,14 +18,17 @@
         </header>
 
         <nav class="menu">
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="produits.html">Nos Produits</a></li>
-                <li><a href="panier.html">Panier <span id="compteur-panier" class="compteur-panier"></span></a></li>
-                <li><a href="login.html">Connexion</a></li>
-                <li><a href="authentication.html">Inscription</a></li>
-            </ul>
-        </nav>
+    <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="produits.html">Nos Produits</a></li>
+        <li>
+            <a href="panier.html">Panier</a>
+            <span class="panier-bulle"></span>
+        </li>
+        <li><a href="login.html">Connexion</a></li>
+        <li><a href="authentication.html">Inscription</a></li>
+    </ul>
+</nav>
 
         <main>
             <section class="formulaire-inscription">
@@ -52,9 +55,9 @@
                     <fieldset>
                         <legend>Genre :</legend>
                         <input type="radio" name="genre" id="choix-1" value="h" checked>
-                        <label for="choix-1">Homme</label> <br>
+                        <label for="choix-1">Homme</label> 
                         <input type="radio" name="genre" id="choix-2" value="f">
-                        <label for="choix-2">Femme</label> <br>
+                        <label for="choix-2">Femme</label> 
                     </fieldset> <br>
 
                     <fieldset>
@@ -83,7 +86,7 @@
         </main>
 
         <footer>
-            <p>&copy; Ce site est un projet de test </p>
+            <p>&copy; Tous droits réservés </p>
         </footer>
     </div>
 
