--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caméras Ummto</title>
+    <title>Accueil | Caméras UMMTO</title>
     <link rel="stylesheet" href="style/styles.css">
+    <meta name="description" content="Découvrez notre sélection de caméras et appareils photo professionnels. Capturer l'instant avec des équipements haut de gamme.">
 </head>
 <body>
     <div class="contenaire">
@@ -13,31 +14,81 @@
                 <img src="image/logo.png" alt="Logo Caméras UMMTO" class="logo">
                 <div class="header-text">
                     <h1>Caméras UMMTO</h1>
+                    <p>Capturer l'instant avec perfection</p>
                 </div>
             </div>
         </header>
+
         <nav class="menu">
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="produits.html">Nos Produits</a></li>
-                <li><a href="panier.html">Panier <span id="compteur-panier" class="compteur-panier"></span></a></li>
-                <li><a href="login.html">Connexion</a></li>
-                <li><a href="authentication.html">Inscription</a></li>
-            </ul>
-        </nav>
+    <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="produits.html">Nos Produits</a></li>
+        <li>
+            <a href="panier.html">Panier</a>
+            <span class="panier-bulle"></span>
+        </li>
+        <li><a href="login.html">Connexion</a></li>
+        <li><a href="authentication.html">Inscription</a></li>
+    </ul>
+</nav>
 
         <main>
-            <section class="presentation">
-                <h2>🌟 Bienvenue sur Cameras UMMTO Votre Destination High-Tech pour la Photographie ! 🌟</h2>
-                <p>Découvrez notre sélection exclusive de caméras professionnelles,
-                     accessoires et équipements pour capturer chaque moment avec précision. 
-                     Que vous soyez débutant ou expert, trouvez le matériel qu’il vous faut au meilleur prix. 
-                     Livraison rapide, conseils d'experts et garantie satisfait ou remboursé ! 📸✨</p>
+            <section class="hero">
+                <div class="hero-content">
+                    <h2>Capturez l'instant avec précision</h2>
+                    <p>Des appareils photo haut de gamme pour des souvenirs inoubliables.</p>
+                    <a href="produits.html" class="btn-primary">Explorez notre collection</a>
+                </div>
             </section>
-                <h2><a href="produits.html">choisisser votre camera maintenant</a></h2>
+
+            <section class="avantages">
+                <div class="avantage-card">
+                    <div class="avantage-icon">🚀</div>
+                    <h3>Livraison Express</h3>
+                    <p>Recevez votre commande en un temps record.</p>
+                </div>
+                <div class="avantage-card">
+                    <div class="avantage-icon">🛡️</div>
+                    <h3>Sécurité Maximale</h3>
+                    <p>Vos transactions sont protégées par un cryptage avancé.</p>
+                </div>
+                <div class="avantage-card">
+                    <div class="avantage-icon">⭐️</div>
+                    <h3>Qualité Premium</h3>
+                    <p>Nous sélectionnons les meilleurs appareils photo du marché.</p>
+                </div>
+            </section>
+
+            <section class="produits-phares">
+                <h2>Nos produits phares</h2>
+                <div class="produit-contenaire">
+                    <div class="produit">
+                        <img src="image/Canon EOS M50 Mark II Mirrorless Camera with ( 15-45mm IS STM ).jpg" alt="Canon EOS M50 Mark II">
+                        <h3>Canon EOS M50 Mark II</h3>
+                        <p>Camera UHD avec zoom optique 3x</p>
+                        <p class="prix">135 000DZD</p>
+                        <a href="produits.html" class="btn-primary">Voir plus</a>
+                    </div>
+                    <div class="produit">
+                        <img src="image/Nikon D7500 DSLR Camera with 18-140mm Lens.jpg" alt="Nikon D7500">
+                        <h3>Nikon D7500</h3>
+                        <p>Compacte et légère</p>
+                        <p class="prix">249 000DZD</p>
+                        <a href="produits.html" class="btn-primary">Voir plus</a>
+                    </div>
+                    <div class="produit">
+                        <img src="image/Sony FE 200-600mm f5.6-6.3 G OSS Lens.jpg" alt="Sony FE 200-600mm">
+                        <h3>Sony FE 200-600mm</h3>
+                        <p>All-in-One Versatility</p>
+                        <p class="prix">145 000DZD</p>
+                        <a href="produits.html" class="btn-primary">Voir plus</a>
+                    </div>
+                </div>
+            </section>
         </main>
+
         <footer>
-            <p>&copy; Ce site est un projet de test </p>
+            <p>&copy; Tous droits réservés</p>
         </footer>
     </div>
 
