--- a/login.html
+++ b/login.html
@@ -17,15 +17,18 @@
             </div>
         </header>
 
-        <nav class="menu">
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="produits.html">Nos Produits</a></li>
-                <li><a href="panier.html">Panier <span id="compteur-panier" class="compteur-panier"></span></a></li>
-                <li><a href="login.html">Connexion</a></li>
-                <li><a href="authentication.html">Inscription</a></li>
-            </ul>
-        </nav>
+       <nav class="menu">
+    <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="produits.html">Nos Produits</a></li>
+        <li>
+            <a href="panier.html">Panier</a>
+            <span class="panier-bulle"></span>
+        </li>
+        <li><a href="login.html">Connexion</a></li>
+        <li><a href="authentication.html">Inscription</a></li>
+    </ul>
+</nav>
 
         <main>
             <section class="formulaire-connexion">
@@ -47,7 +50,7 @@
         </main>
 
         <footer>
-            <p>&copy; Ce site est un projet de test </p>
+            <p>&copy; Tous droits réservés </p>
         </footer>
     </div>
 
