--- a/produits.html
+++ b/produits.html
@@ -18,14 +18,17 @@
         </header>
 
         <nav class="menu">
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="produits.html">Nos Produits</a></li>
-                <li><a href="panier.html">Panier <span id="compteur-panier" class="compteur-panier"></span></a></li>
-                <li><a href="login.html">Connexion</a></li>
-                <li><a href="authentication.html">Inscription</a></li>
-            </ul>
-        </nav>
+    <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="produits.html">Nos Produits</a></li>
+        <li>
+            <a href="panier.html">Panier</a>
+            <span class="panier-bulle"></span>
+        </li>
+        <li><a href="login.html">Connexion</a></li>
+        <li><a href="authentication.html">Inscription</a></li>
+    </ul>
+</nav>
 
         <main>
             <section class="liste-produits">
@@ -102,7 +105,7 @@
         </main>
 
         <footer>
-            <p>&copy; Ce site est un projet de test </p>
+            <p>&copy; Tous droits réservés </p>
         </footer>
     </div>
 
