--- a/authentication.html
+++ b/authentication.html
@@ -18,17 +18,19 @@
         </header>
 
         <nav class="menu">
-    <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="produits.html">Nos Produits</a></li>
-        <li>
+        <nav class="menu">
+        <div class="hamburger" onclick="toggleMenu()">☰</div>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="produits.html">Nos Produits</a></li>
+            <li>
             <a href="panier.html">Panier</a>
             <span class="panier-bulle"></span>
-        </li>
-        <li><a href="login.html">Connexion</a></li>
-        <li><a href="authentication.html">Inscription</a></li>
-    </ul>
-</nav>
+            </li>
+            <li><a href="login.html">Connexion</a></li>
+            <li><a href="authentication.html">Inscription</a></li>
+        </ul>
+        </nav>
 
         <main>
             <section class="formulaire-inscription">
