--- a/produits.html
+++ b/produits.html
@@ -18,18 +18,18 @@
         </header>
 
         <nav class="menu">
-    <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="produits.html">Nos Produits</a></li>
-        <li>
+        <div class="hamburger" onclick="toggleMenu()">☰</div>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="produits.html">Nos Produits</a></li>
+            <li>
             <a href="panier.html">Panier</a>
             <span class="panier-bulle"></span>
-        </li>
-        <li><a href="login.html">Connexion</a></li>
-        <li><a href="authentication.html">Inscription</a></li>
-    </ul>
-</nav>
-
+            </li>
+            <li><a href="login.html">Connexion</a></li>
+            <li><a href="authentication.html">Inscription</a></li>
+        </ul>
+        </nav>
         <main>
             <section class="liste-produits">
                 <h2>Tous nos produits</h2>
