--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="header-content">
                 <img src="image/logo.png" alt="Logo Caméras UMMTO" class="logo">
                 <div class="header-text">
-                    <h1>Caméras UMMTO</h1>
+                    <h1>Caméras kyowasagi</h1>
                     <p>Capturer l'instant avec perfection</p>
                 </div>
             </div>
