--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil | Caméras UMMTO</title>
+    <title>Accueil | Caméras kyowasagi</title>
     <link rel="stylesheet" href="style/styles.css">
     <meta name="description" content="Découvrez notre sélection de caméras et appareils photo professionnels. Capturer l'instant avec des équipements haut de gamme.">
 </head>
