--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </nav>
 
         <main>
-            <section class="hero">
-                <div class="hero-content">
+            <section class="back">
+                <div class="back-content">
                     <h2>Capturez l'instant avec précision</h2>
                     <p>Des appareils photo haut de gamme pour des souvenirs inoubliables.</p>
                     <a href="produits.html" class="btn-primary">Explorez notre collection</a>
